<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="receive_launch_broadcasts_permission" translatable="false">com.truongnt.ios.launcher.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.truongnt.ios.launcher.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="launcher_application_name">Launcher</string>
    <string name="folder_name">Folder</string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="please_grant">Please grant this app permission in order to use selected features</string>
    <string name="receiver_expl">Allow "Lock" to turn the screen off?</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching</string>
    <string name="all_apps_search_market_message">Go to <xliff:g example="Play Store" id="query">%1$s</xliff:g></string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="themes_shortcut_label" translatable="false">MiOS Launcher Themes</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App Info</string>
    <string name="desktop_target_label">Back Desktop</string>
    <string name="unable_install_app_label">System application, cannot be uninstalled</string>
    <string name="unable_remove_remove_label">Folders can not be deleted</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_menu_rename">Rename</string>
    <string name="folder_menu_sort_alphabet">Sort alphabetically</string>
    <string name="folder_menu_sort_use">Sort by most used</string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="settings_label">Settings</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="icon_badging_service_title">Show notification dots</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$s</xliff:g> column <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g example="Game" id="name">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g example="2" id="number">%1$s</xliff:g> height <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="category_folder_google" translatable="false">Google</string>
    <string name="category_folder_ios_tools">Launcher Tools</string>
    <string name="category_folder_game">Game</string>
    <string name="category_folder_entertainment">Entertainment</string>
    <string name="category_folder_media">Media</string>
    <string name="category_folder_photo">Photo</string>
    <string name="category_folder_social">Social</string>
    <string name="category_folder_news_books">News and Books</string>
    <string name="category_folder_finance_shopping">Finance Shopping</string>
    <string name="category_folder_lifestyle">Lifestyle</string>
    <string name="category_folder_tools">Tool</string>
    <string name="category_folder_traffic">Traffic</string>
    <string name="category_folder_work_study">Work</string>
    <string name="category_folder_system">System</string>
    <string name="category_folder_others">Folder</string>
    <string name="category_folder_default">Folder</string>
    <string name="category_to_folder">Move to folder</string>
    <string name="main_menu_login">Login</string>
    <string name="main_menu_effect">Scroll Effect</string>
    <string name="main_menu_theme_wallpaper">Theme,Wallpaper</string>
    <string name="main_menu_add_widget">Add Tools</string>
    <string name="main_menu_feedback">Feedback</string>
    <string name="main_menu_share">Share</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="setting_appearance">Appearance</string>
    <string name="settings_icon_design">Icon Design</string>
    <string name="settings_icon_design_description">Design Icon and font size</string>
    <string name="setting_category_desktop">Desktop</string>
    <string name="setting_category_drawer">Drawer</string>
    <string name="setting_effects">Effect</string>
    <string name="settings_general">General</string>
    <string name="settings_gesture">Gesture</string>
    <string name="settings_save_restore">Backup and Restore</string>
    <string name="settings_backup">Backup Settings</string>
    <string name="setting_restore">Restore Settings</string>
    <string name="setting_restore_description">Import desktop data (apps, folders, shortcuts, and widgets on the home screen) from storage space.</string>
    <string name="setting_reset">Reset Settings</string>
    <string name="setting_reset_description">Reset launcher data (apps, folders, shortcuts, settings, etc.) to default launcher data.</string>
    <string name="home_screen_style">Home screen style</string>
    <string name="drawer_style">App drawer style</string>
    <string name="setting_desktop_grid">Desktop grid</string>
    <string name="setting_desktop_grid_summary">Grid size for apps and widgets on the desktop</string>
    <string name="setting_icon_size">Icon Size</string>
    <string name="setting_label_size">Label Size</string>
    <string name="setting_label_color">Label Color</string>
    <string name="drawer_alpha_vertical_title">Vertical Sort alphabetically</string>
    <string name="sleep_mode_desc">Double click the blank space of desktop to sleep mode</string>
    <string name="sleep_mode_title">Quick lock screen</string>
    <string name="settings_screen_layout">Screen Layout</string>
    <string name="settings_screen_feature">Features</string>
    <string name="setting_gesture">Gestures</string>
    <string name="setting_gesture_swipe_down">Swipe Down</string>
    <string name="setting_gesture_swipe_up">Swipe Up</string>
    <string name="setting_gesture_none">Not Set</string>
    <string name="setting_gesture_swipe_obliquely">Slide Obliquely</string>
    <string name="setting_gesture_swipe_action">Swipe Action</string>
    <string name="setting_gesture_press_action">Press Action</string>
    <string name="setting_size_big">Big</string>
    <string name="setting_size_normal">Default</string>
    <string name="setting_size_small">Small</string>
    <string name="widget_weather_need_permission">Location permission needed</string>
    <string name="weather_sample_city">San Francisco</string>
    <string name="weather_sample_temp">53°</string>
    <string name="weather_sample_condition">Sunny</string>
    <string name="weather_sample_highlow">H:56°  L:50°</string>
    <string name="widget_picture_tap_to_grant">Tap to allow access</string>
</resources>