<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.amz.ios.launcher.views.TopTitlebar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        launcher:titleText="@string/setting_gesture" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.amz.ios.launcher.views.CustomTextView
                style="@style/pref_settingtitle"
                android:textColor="@color/pref_category_grey"
                android:text="@string/setting_gesture_swipe_action" />

            <com.amz.ios.launcher.views.IOSPreference
                android:id="@+id/swipe_down"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                launcher:preferenceSummary="@string/setting_gesture_none"
                launcher:preferenceTitle="@string/setting_gesture_swipe_down"
                launcher:rightImage="rightArrow" />

            <com.amz.ios.launcher.views.IOSPreference
                android:id="@+id/swipe_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                launcher:preferenceSummary="@string/setting_gesture_none"
                launcher:preferenceTitle="@string/setting_gesture_swipe_up"
                launcher:rightImage="rightArrow" />

            <com.amz.ios.launcher.views.IOSPreference
                android:id="@+id/swipe_obliquely"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                launcher:preferenceSummary="@string/setting_gesture_none"
                launcher:preferenceTitle="@string/setting_gesture_swipe_obliquely"
                launcher:rightImage="rightArrow" />

            <include
                android:id="@+id/settings_default_launcher_gap"
                layout="@layout/preference_gap" />

            <com.amz.ios.launcher.views.CustomTextView
                style="@style/pref_settingtitle"
                android:textColor="@color/pref_category_grey"
                android:text="@string/setting_gesture_press_action" />

            <com.amz.ios.launcher.views.IOSPreference
                android:id="@+id/settings_sleep"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                launcher:preferenceSummary="@string/sleep_mode_desc"
                launcher:preferenceTitle="@string/sleep_mode_title"
                launcher:rightImage="showSwitch" />


            <!--<com.amz.ios.launcher.views.IOSPreference-->
                <!--android:id="@+id/double_tap"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--launcher:preferenceSummary="@string/setting_gesture_none"-->
                <!--launcher:preferenceTitle="@string/setting_gesture_double_tap"-->
                <!--launcher:rightImage="rightArrow" />-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>