<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.amz.ios.launcher.views.TopTitlebar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            launcher:titleText="@string/setting_appearance" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/settings_default_launcher_gap"
                    layout="@layout/preference_gap" />

                <com.amz.ios.launcher.views.CustomTextView
                    style="@style/pref_settingtitle"
                    android:textColor="@color/pref_category_grey"
                    android:text="@string/setting_category_desktop" />

                <com.amz.ios.launcher.views.IOSPreference
                    android:id="@+id/dekstop_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceSummary="@string/setting_desktop_grid_summary"
                    launcher:preferenceTitle="@string/home_screen_style"
                    launcher:rightImage="rightArrow" />


                <com.amz.ios.launcher.views.IOSPreference
                    android:id="@+id/desktop_grid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceSummary="@string/setting_desktop_grid_summary"
                    launcher:preferenceTitle="@string/setting_desktop_grid"
                    launcher:rightImage="rightArrow" />

                <include
                    android:id="@+id/settings_default_launcher_gap"
                    layout="@layout/preference_gap" />

                <com.amz.ios.launcher.views.CustomTextView
                    android:id="@+id/drawer_subtitle"
                    style="@style/pref_settingtitle"
                    android:textColor="@color/pref_category_grey"
                    android:text="@string/setting_category_drawer" />

                <com.amz.ios.launcher.views.IOSPreference
                    android:id="@+id/drawer_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    launcher:preferenceTitle="@string/drawer_style"
                    launcher:preferenceSummary="@string/drawer_alpha_vertical_title"
                    launcher:rightImage="rightArrow" />

                <include
                    android:id="@+id/settings_default_launcher_gap"
                    layout="@layout/preference_gap" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>