<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/folder_popup_menu_bg"
    android:elevation="2dp"
    android:orientation="vertical">

    <com.amz.ios.launcher.views.CustomTextView
        android:id="@+id/rename"
        style="@style/folder_popup_menu_item_style"
        android:text="@string/folder_menu_rename" />

    <com.amz.ios.launcher.views.CustomTextView
        android:id="@+id/sort_alphabet"
        style="@style/folder_popup_menu_item_style"
        android:text="@string/folder_menu_sort_alphabet" />

    <com.amz.ios.launcher.views.CustomTextView
        android:id="@+id/sort_use"
        style="@style/folder_popup_menu_item_style"
        android:text="@string/folder_menu_sort_use" />
</LinearLayout>