<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.amz.ios.launcher.views.ScaleSeekBar
        android:id="@+id/setting_size_seek_bar"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="32.0dip"
        android:layout_marginRight="32.0dip"
        android:layout_marginTop="80.0dip"
        android:paddingBottom="8.0dip"
        android:paddingTop="8.0dip" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44.0dip"
        android:layout_marginRight="44.0dip"
        android:layout_marginTop="4.0dip">

        <com.amz.ios.launcher.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:gravity="center"
            android:text="@string/setting_size_small"
            android:textColor="@color/launcher_white"
            android:textSize="14.0sp" />

        <com.amz.ios.launcher.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setting_size_normal"
            android:textColor="@color/launcher_white"
            android:textSize="14.0sp" />

        <com.amz.ios.launcher.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:gravity="center"
            android:text="@string/setting_size_big"
            android:textColor="@color/launcher_white"
            android:textSize="14.0sp" />
    </FrameLayout>

</LinearLayout>